# fsb-bot

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  main.cpp
commands/: ban.cpp  commands.hpp  help.cpp  kick.cpp  ping.cpp  play.cpp  rules.cpp
config/: tweaks.hpp
events/: events.hpp  guild.member.add.cpp  guild.member.remove.cpp  interaction.create.cpp  message.create.cpp  ready.cpp
utils/: utils.hpp
utils/database/: connection.handler.cpp  queries.handler.cpp  utils.database.hpp
utils/files/: files.manager.cpp  utils.files.hpp
utils/logs/: logs.handler.cpp  utils.logs.hpp
utils/miscellaneous/: integers.cpp  role.position.cpp  time.cpp  utils.miscellaneous.hpp
utils/parsers/: config.parser.cpp  utils.parsers.hpp
utils/text/: trim.cpp  utils.text.hpp
